<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_converter">

    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.example.coincounter.ui.camera.CameraFragment"
        android:label="@string/title_converter"
        tools:layout="@layout/fragment_camera" />

    <fragment
        android:id="@+id/navigation_historic"
        android:name="com.example.coincounter.ui.historic.HistoricFragment"
        android:label="@string/title_historic"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_converter"
        android:name="com.example.coincounter.ui.convert.ConvertFragment"
        android:label="@string/title_camera"
        tools:layout="@layout/fragment_converter" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.coincounter.ui.settings.navigation_settings"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_navigation_settings" />
</navigation>